--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,3 @@
 RewriteEngine on
-RewriteCond $1 !^(index\.php|images|robots\.txt|user_guide|docs)
+RewriteCond $1 !^(index\.php|images|robots\.txt|user_guide|docs|js|css)
 RewriteRule ^(.*)$ index.php/$1 [L]
