--- a/application/views/.htaccess
+++ b/application/views/.htaccess
@@ -1,7 +1,3 @@
-<b>أهلا بك في تاكسي مصر</b></br></br>
-<form action="<?php echo base_url('search'); ?>" method="post">
-أدخل رقم التاكسي: <br><br>
-<input type="text" name="taxinum"><br><br>
-<input type="submit" name="search" value="أبحث عن التاكسي"><br><br>
-</form>
-
+RewriteEngine on
+RewriteCond $1 !^(index\.php|images|robots\.txt|css|js)
+RewriteRule ^(.*)$ index.php
