--- a/.htaccess
+++ b/.htaccess
@@ -1,32 +1,4 @@
-<<<<<<< HEAD
 RewriteEngine on
-RewriteCond $1 !^(index\.php|images|robots\.txt)
-RewriteRule . index.php
-=======
-RewriteEngine On 
-RewriteCond %{REQUEST_FILENAME} !-f 
-RewriteCond %{REQUEST_FILENAME} !-d 
+RewriteCond $1 !^(index\.php|images|robots\.txt|uploads)
 RewriteRule ^(.*)$ index.php/$1 [L]
 
-#Removes access to the system folder by users.
-#Additionally this will allow you to create a System.php controller,
-#previously this would not have been possible.
-#'system' can be replaced if you have renamed your system folder.
-#RewriteCond %{REQUEST_URI} ^system.*
-#RewriteRule ^(.*)$ /index.php/$1 [L]
- 
-#Checks to see if the user is attempting to access a valid file,
-#such as an image or css document, if this isn't true it sends the
-#request to index.php
-#RewriteCond %{REQUEST_FILENAME} !-f
-#RewriteCond %{REQUEST_FILENAME} !-d
-#RewriteRule ^(.*)$ index.php/$1 [L]
- 
-# If we don't have mod_rewrite installed, all 404's
-# can be sent to index.php, and everything works as normal.
-# Submitted by: ElliotHaughin
- 
-#ErrorDocument 404 /index.php
-
-
->>>>>>> dec0fa0ea958bef6fac22e4d6d1fb115b9fcb3bb
